# release-kit

./: .editorconfig  .env-example  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MULTI-PACKAGE-AUDIT.md  Makefile  RE-AUDIT.md  README.md  SECURITY.md  VALIDATION.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: architecture.md  cli.md  configuration.md  decisions.md  security.md  troubleshooting.md
docs/playbook/: README.md
docs/playbook/cross-cutting/: oidc-matrix.md  preflight.md  provenance.md  secrets.md  token-scoping.md  versioning.md
docs/playbook/git-hosts/: azure-devops.md  bitbucket-dc.md  bitbucket.md  gitea.md  github-enterprise-cloud.md  github-enterprise-server.md  github.md  gitlab-self-managed.md  gitlab.md
docs/playbook/registries/: acr.md  aws-ecr.md  cargo.md  conda-forge.md  dockerhub.md  gar.md  ghcr.md  gitlab-registry.md  homebrew.md  maven-central.md  npm-github.md  npm-gitlab.md  npm.md  nuget.md  packagist.md  pypi.md  rubygems.md
docs/recipes/: README.md  container-only.md  multi-registry-monorepo.md  node-package-to-npm.md  python-package-to-pypi.md
docs/workflows/: ci-release.md  first-publish.md  oidc-bootstrap.md  token-rotation.md
src/release_kit/: __init__.py
src/release_kit/cli/: app.py
src/release_kit/core/: config.py  env.py  errors.py  logging.py  runner.py  secrets.py
src/release_kit/schema/: release-kit.schema.json
src/release_kit/workflows/: bootstrap_repo.py  publish.py  rotate_tokens.py
tests/: conftest.py
tests/cli/: test_cli_commands.py
tests/core/: test_config.py  test_runner.py  test_secrets.py
tests/workflows/: test_workflows.py
