[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "simtabi-release-kit"
version = "0.1.0"
description = "Multi-registry publishing automation. PyPI, npm, Docker, Homebrew, Maven, RubyGems, Cargo, NuGet, Packagist, plus seven git hosts. Fluent OOP, config-driven, OIDC-first."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Simtabi LLC", email = "opensource@simtabi.com" }]
maintainers = [{ name = "Imani Manyara", email = "imani@simtabi.com" }]
requires-python = ">=3.11"

keywords = [
  "release", "publish", "pypi", "npm", "docker", "homebrew",
  "ci-cd", "github-actions", "oidc", "automation"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Software Distribution",
]

# Base install: enough for the CLI to run + the PyPI / GitHub paths.
# Per-platform clients install on demand via extras (below).
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "structlog>=24.1",
  "httpx>=0.27",
  "keyring>=24.3",
  "python-dotenv>=1.0",
  "tomli; python_version<'3.11'",  # we floor at 3.11 so this is belt-and-braces
  "platformdirs>=4.2",
]

[project.optional-dependencies]
# Per-platform extras keep the base install lean.
aws    = ["boto3>=1.34"]
gcp    = ["google-cloud-artifactregistry>=1.13"]
azure  = ["azure-containerregistry>=1.2", "azure-identity>=1.16"]
docker = []        # uses subprocess to `docker` CLI; no python client needed
twine  = ["twine>=5.0", "build>=1.2"]
github = []        # uses gh CLI + REST via httpx
gitlab = []        # uses REST via httpx
all    = [
  "boto3>=1.34",
  "google-cloud-artifactregistry>=1.13",
  "azure-containerregistry>=1.2",
  "azure-identity>=1.16",
  "twine>=5.0",
  "build>=1.2",
]

dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "types-PyYAML",
  "jsonschema>=4.21",   # validates the bundled release-kit.schema.json
]

[project.scripts]
release-kit = "release_kit.cli.app:app"

[project.urls]
Homepage      = "https://opensource.simtabi.com/products/release-kit"
Documentation = "https://opensource.simtabi.com/documentation/release-kit"
Repository    = "https://github.com/simtabi/release-kit"
Issues        = "https://github.com/simtabi/release-kit/issues"
Changelog     = "https://github.com/simtabi/release-kit/blob/main/CHANGELOG.md"

# Plugin discovery: third parties can add platforms without forking.
[project.entry-points."release_kit.platforms"]
pypi       = "release_kit.platforms.registries.pypi:PyPI"
dockerhub  = "release_kit.platforms.registries.dockerhub:DockerHub"
ghcr       = "release_kit.platforms.registries.ghcr:GHCR"
npm        = "release_kit.platforms.registries.npm:Npm"
homebrew   = "release_kit.platforms.registries.homebrew:Homebrew"
github     = "release_kit.platforms.git_hosts.github:GitHub"
gitlab     = "release_kit.platforms.git_hosts.gitlab:GitLab"
gitlab-registry = "release_kit.platforms.registries.gitlab_registry:GitLabRegistry"
aws-ecr    = "release_kit.platforms.registries.aws_ecr:AWSElasticContainerRegistry"
gar        = "release_kit.platforms.registries.gar:GoogleArtifactRegistry"
acr        = "release_kit.platforms.registries.acr:AzureContainerRegistry"
npm-github = "release_kit.platforms.registries.npm_github:NpmGitHubPackages"
npm-gitlab = "release_kit.platforms.registries.npm_gitlab:NpmGitLabRegistry"
rubygems   = "release_kit.platforms.registries.rubygems:RubyGems"
cargo      = "release_kit.platforms.registries.cargo:CratesIo"
nuget      = "release_kit.platforms.registries.nuget:NuGet"
packagist  = "release_kit.platforms.registries.packagist:Packagist"
maven-central = "release_kit.platforms.registries.maven_central:MavenCentral"
github-enterprise-cloud  = "release_kit.platforms.git_hosts.github_enterprise:GitHubEnterpriseCloud"
github-enterprise-server = "release_kit.platforms.git_hosts.github_enterprise:GitHubEnterpriseServer"
gitlab-self-managed      = "release_kit.platforms.git_hosts.gitlab_self_managed:GitLabSelfManaged"
bitbucket                = "release_kit.platforms.git_hosts.bitbucket:BitbucketCloud"
bitbucket-dc             = "release_kit.platforms.git_hosts.bitbucket_dc:BitbucketDataCenter"
gitea                    = "release_kit.platforms.git_hosts.gitea:Gitea"
azure-devops             = "release_kit.platforms.git_hosts.azure_devops:AzureDevOps"

[tool.hatch.build]
include = [
  "src/release_kit/**/*.py",
  "src/release_kit/schema/*.json",
  "src/release_kit/py.typed",
]
exclude = [
  "**/__pycache__",
  "**/.pytest_cache",
  "**/*.pyc",
]

[tool.hatch.build.targets.wheel]
packages = ["src/release_kit"]

[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "tests/",
  "docs/",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
  "pyproject.toml",
  "Makefile",
  ".env-example",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["docs/playbook/**"]

[tool.ruff.lint]
select = [
  "E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF", "C4", "PT",
]
ignore = ["E501"]  # line-length handled separately

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_decorators = true
exclude = ["tests/fixtures/.*"]

[[tool.mypy.overrides]]
module = ["respx.*", "keyring.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=release_kit",
  "--cov-report=term-missing:skip-covered",
  "--cov-fail-under=70",
]
markers = [
  "integration: requires network + real credentials; gated by env vars; skipped by default",
  "slow: takes > 1s",
]

[tool.coverage.run]
branch = true
source = ["src/release_kit"]
omit = [
  "*/cli/app.py",   # CLI is exercised via subprocess integration tests; not unit-coverable
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
